<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_above="@+id/copyright_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_alignParentTop="true"
            android:layout_height="80dp"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/tab_normal"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/map_type_normal"/>

            <Button
                android:id="@+id/tab_satellite"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/map_type_satellite"/>

            <Button
                android:id="@+id/tab_terran"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/map_type_terrain"/>

            <Button
                android:id="@+id/tab_hybrid"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center"
                android:text="@string/map_type_hybrid"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/copyright_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/copyright"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:autoLink="web"
            android:linksClickable="true"/>
    </LinearLayout>
</RelativeLayout>