<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_above="@+id/copyright_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <fragment
            android:id="@+id/map"
            android:layout_above="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <Button
            android:id="@+id/stop_animation"
            android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:text="@string/stop_animation"/>

        <LinearLayout
            android:id="@+id/button_layout"
            android:baselineAligned="false"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_height="80dp"
                android:layout_width="match_parent">

                <Button
                    android:id="@+id/animate_to_a"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:text="@string/animate_to_a"/>

                <Button
                    android:id="@+id/animate_to_b"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:text="@string/animate_to_b"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/copyright_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/copyright"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:autoLink="web"
            android:linksClickable="true"/>
    </LinearLayout>
</RelativeLayout>