<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_above="@+id/copyright_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <fragment
            android:id="@+id/map"
            android:layout_above="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <ImageView
            android:padding="4dp"
            android:id="@+id/snapshot_place"
            android:layout_alignParentLeft="true"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:background="@color/light_black"/>

        <LinearLayout
            android:id="@+id/button_layout"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/take_snapshot_button1"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/take_snapshot_button_1"/>

            <Button
                android:id="@+id/take_snapshot_button2"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/take_snapshot_button_2"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/copyright_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/copyright"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:autoLink="web"
            android:linksClickable="true"/>
    </LinearLayout>
</RelativeLayout>